--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -35,7 +35,7 @@
 
 .activeLink {
   text-decoration: none;
-  color: #dc03e7;
+  color: #c394ee;
   font-size: 18px;
   font-weight:600;
 }
@@ -53,7 +53,7 @@
 }
 
 .logout-button {
-  background-color: #dc03e7;
+  background-color: #c394ee;
   color: white;
   padding: 10px 20px;
   border: none;
