--- a/client/src/main.css
+++ b/client/src/main.css
@@ -4,3 +4,8 @@
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
 }
+body {
+  background: linear-gradient(112deg, #852cde, #c394ee);
+  height: 100vh;
+  color: white;
+}
