made a lot of css changes

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -7,6 +7,8 @@
     font-size: 18px;
     line-height: 1.5;
     margin-bottom: 20px;
+    margin-top: 10px;
+    width: 50%;
 }
 .button{
     background-color: #ffffff;
@@ -24,3 +26,10 @@
 .button:hover{
     box-shadow: none;
 }
+
+@media (max-width: 900px) {
+    .para{
+        width: 90%;
+    }
+}
+  
