--- a/client/src/components/Forum/ForumForm/forumForm.css
+++ b/client/src/components/Forum/ForumForm/forumForm.css
@@ -1,24 +1,19 @@
-/* styles.css */
-
-/* Apply a basic reset to remove default padding and margins */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-/* Style the form container */
 form {
     width: 300px;
     margin-right: 20px;
     padding: 20px;
-    background-color: #bebebe;
-    border: 3px solid #000000;
+    background-color: #f0f0f0;
+    border: 4px solid #000000;
     border-radius: 5px;
     text-align: center;
+    box-shadow: 5px 5px 5px black;
 }
 
-/* Style the form header */
 h4 {
     font-size: 20px;
     margin-bottom: 10px;
@@ -41,6 +36,19 @@ input, textarea {
     color: #333;
 }
 button{
+    background-color: #852cde;;
+    font-weight: 600;
+    font-size: 15px;
+    color: #ffffff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+button:hover{
+    box-shadow: none;
+}
+.button{
     background-color: #ffffff;
     font-weight: 600;
     font-size: 15px;
@@ -53,11 +61,7 @@ button{
     box-shadow: 3px 3px 5px black;
 
 }
-button:hover{
+.button:hover{
     box-shadow: none;
 }
 
-/* Add some spacing to the form elements */
-form > * {
-    margin-bottom: 10px;
-}
