--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif !important;
   letter-spacing: 1px;
 }
 body {
   background: linear-gradient(112deg, #852cde, #c394ee);
   height: 100vh;
+  overflow: auto;
   color: white;
 }
