--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -18,13 +18,13 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
-.sections-container{
+.sections-container {
     display: flex;
     justify-content: space-between;
     width: 80%;
 }
 
-.forum-section{
+.forum-section {
     flex: 1;
     margin: 0 20px;
 }
@@ -34,12 +34,12 @@
     margin: 0 20px;
 }
 
-.comment-section{
+.comment-section {
     text-align: center;
     margin-top: 20px;
 }
 
-.forum-card{
+.forum-card {
     flex: 1;
     border: 1px solid #ccc;
     padding: 10px;
@@ -58,7 +58,7 @@
     flex: 1;
     background-color: #852cde;
     color: white;
-    border: 1px solid white; /* Add a white border */
+    border: 1px solid white;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -70,6 +70,6 @@
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
 }
 
-ul{
+ul {
     list-style: none;
 }
