--- a/client/src/main.css
+++ b/client/src/main.css
@@ -5,7 +5,7 @@
   letter-spacing: 1px;
 }
 body {
-  background: linear-gradient(112deg, #852cde, #c394ee);
+  background: linear-gradient(112deg, #852cde, #ff7979);
   height: 100vh;
   overflow: auto;
   color: white;
