--- a/client/src/main.css
+++ b/client/src/main.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: Arial, Helvetica, sans-serif !important;
   letter-spacing: 1px;
+  zoom: 0.99
 }
 body {
   background: linear-gradient(112deg, #852cde, #ff7979);
